# perftest-rvma

./: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.old  NOTE.txt  README  a.out  big_am_strace_client.txt  big_am_strace_server.txt  build.txt  client_strace.txt  cm_client.txt  cm_server.txt  compile_commands.json  config.h  config.h.in~  config.status  configure  configure.ac  configure.ac~  error.txt  errors.txt  grep  ib_write_bw  ib_write_lat  latest_client_pain.txt  latest_clientstrace.txt  latest_strace.txt  librvma_client_shim.la  librvma_server_shim.la  libtool  libvma_client_stream  libvma_server_stream  log_socket_client.out  log_socket_server.out  parseAndGraphBenchmarkResults.py  raw_ethernet_burst_lat  raw_ethernet_bw  raw_ethernet_fs_rate  (+40 more)
.libs/: librvma_client_shim.la  librvma_client_shim.lai  librvma_client_shim.so.0.0.0  librvma_server_shim.la  librvma_server_shim.lai  librvma_server_shim.so.0  librvma_server_shim.so.0.0.0
autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.3  traces.4
m4/: libtool.m4
results/: rsocket_bw_test-45243108.out  rsocket_bw_test-45310094.out  rsocket_lat_test-45243095.out  rsocket_lat_test-45312403.out  rsocket_stream_lat-10832473.out  rsocket_stream_lat-10832477.out  rsocket_stream_lat-11102209.out  rsocket_stream_lat.csv  rvma_bw_benchmark-45228847.out  rvma_lat_benchmark-45015223.out  rvma_lat_benchmark-45017547.out  rvma_lat_benchmark-45019583.out  rvma_lat_benchmark-45022095.out  rvma_lat_benchmark-45228846.out  rvsocket_dgram_exclude_warmup.csv  rvsocket_dgram_exclude_warmup2.csv  rvsocket_dgram_include_warmup.csv  rvsocket_dgram_test-10877993.out  rvsocket_dgram_test-11102185.out  rvsocket_dgram_test-52747402.out  rvsocket_dgram_test-52747963.out  rvsocket_dgram_test-53075020.out  rvsocket_dgram_test-53075683.out  rvsocket_dgram_test-53075783.out  rvsocket_dgram_test-53117485.out  rvsocket_dgram_test-53118515.out  rvsocket_dgram_test-53180590.out  rvsocket_dgram_test-53181871.out  rvsocket_dgram_test-53756612.out  rvsocket_dgram_test-53756752.out  rvsocket_dgram_test-53842398.out  rvsocket_stream_bw.csv  rvsocket_stream_exclude_warmup.csv  rvsocket_stream_exclude_warmup3.csv  rvsocket_stream_exclude_warmup4.csv  rvsocket_stream_include_warmup.csv  rvsocket_stream_lat-11102176.out  rvsocket_stream_lat-11118090.out  rvsocket_stream_lat-11182611.out  rvsocket_stream_latency.csv  (+31 more)
results/bw benchmark/: benchmark_results.csv  rvma_bw_benchmark_group_1-17137446.out  rvma_bw_benchmark_group_2-17137444.out  rvma_bw_benchmark_group_3-17137442.out  rvma_bw_benchmark_group_4-17137440.out
results/lat benchmark/: benchmark_results.csv  rvma_lat_benchmark_group_1-17126517.out  rvma_lat_benchmark_group_2-17126529.out  rvma_lat_benchmark_group_3-17126514.out  rvma_lat_benchmark_group_4-17126515.out
results/temp/: client-16-1-44844186.out  client-16-1-44897294.out  client-16-1-44898193.out  client-16-1-44899516.out  client-16-1-44899909.out  client-16-1-44900044.out  client-16-1-44900065.out  client-16-1-44900358.out  client-16-1-44900494.out  client-16-1-44900574.out  client-16-1-44901534.out  client-16-1-44901589.out  client-16-1-44903533.out  client-16-1-44903833.out  client-16-1-45014406.out  client-16-1-45014594.out  client-16-1-45015223.out  client-16-1-45015495.out  client-16-1-45017036.out  client-16-1-45017547.out  client-16-1-45019583.out  client-16-1-45022095.out  client-16-10-44897294.out  client-16-10-44898193.out  client-16-10-44899516.out  client-16-10-44899909.out  client-16-10-44900044.out  client-16-10-44900065.out  client-16-10-44900358.out  client-16-10-44900494.out  client-16-10-44900574.out  client-16-10-44901534.out  client-16-10-44901589.out  client-16-10-44903533.out  client-16-10-44903833.out  client-16-10-45014406.out  client-16-10-45014594.out  client-16-10-45015223.out  client-16-10-45015495.out  client-16-10-45017036.out  (+2566 more)
src/: .rsocket_client_dgram.c.swp  ISSUES.md  build_and_test.sh  libvma_client_stream  libvma_client_stream.c  libvma_server_stream  libvma_server_stream.c  log.h.gch  mlx5_devx.h  perftest_communication.c  perftest_resources.c  perftest_resources.h  rdtsc.c  rdtsc.h  rsocket_client_bw.c  rsocket_client_dgram.c  rsocket_client_dgram_bw.c  rsocket_client_lat.c  rsocket_server_bw.c  rsocket_server_dgram.c  rsocket_server_dgram_bw.c  rsocket_server_lat.c  rvma_buffer_queue.c  rvma_buffer_queue.h  rvma_buffer_queue_test.c  rvma_buffer_queue_test.h  rvma_common.c  rvma_common.h  rvma_mailbox_client.c  rvma_mailbox_hashmap.c  rvma_mailbox_hashmap.h  rvma_mailbox_hashmap_test.c  rvma_mailbox_hashmap_test.h  rvma_mailbox_server.c  rvma_pipe.c  rvma_shim.c  rvma_shim_client.c  rvma_shim_client.lo  rvma_shim_server.c  rvma_shim_server.lo  (+32 more)
src/.deps/: get_clock.Po  host_memory.Po  indexer.Po  libvma_client_stream.Po  libvma_server_stream.Po  mmap_memory.Po  perftest_communication.Po  perftest_counters.Po  perftest_parameters.Po  perftest_resources.Po  raw_ethernet_fs_rate.Po  raw_ethernet_resources.Po  raw_ethernet_send_burst_lat.Po  raw_ethernet_send_bw.Po  raw_ethernet_send_lat.Po  rsocket_client.Po  rsocket_client_bw.Po  rsocket_client_dgram.Po  rsocket_client_dgram_bw.Po  rsocket_client_lat.Po  rsocket_server.Po  rsocket_server_bw.Po  rsocket_server_dgram.Po  rsocket_server_dgram_bw.Po  rsocket_server_lat.Po  rvma_buffer_queue.Po  rvma_common.Po  rvma_mailbox_client.Po  rvma_mailbox_hashmap.Po  rvma_mailbox_server.Po  rvma_socket.Po  rvma_write.Po  rvsocket_client_dgram.Po  rvsocket_client_dgram_bw.Po  rvsocket_client_lat.Po  rvsocket_client_stream.Po  rvsocket_client_stream_bw.Po  rvsocket_server_dgram.Po  rvsocket_server_dgram_bw.Po  rvsocket_server_lat.Po  (+4 more)
